samples/_failures_safe/1761637177_b8aaa6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aec13fe8.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_aec13fe8.c:184:5: error: expected expression at end of input
  184 |     free(
      |     ^~~~
./samples/SAFE/__tmp_aec13fe8.c:184:5: error: expected declaration or statement at end of input
